Fix Template (Class/Function) Signatures in Clang Code Completion

Summary:
  - Create correct template prefix for Class/Function Templates

  - Handle Template Template Parameter

  - Do not drop function parameters for FunctionTemplates

BUG: 368544
BUG: 377397

Reviewers: #kdevelop, aspotashev, mwolff

Subscribers: #kdevelop, kdevelop-devel

Tags: #kdevelop

Differential Revision: https://phabricator.kde.org/D10277